<resources>
    <string name="app_name">Application</string>
    <string name="splash_text">The largest commodity exchange platform</string>
    <string name="splash_btn_text">Select your city</string>
    <string name="profile_title">My wall</string>
    <string name="chat_title">Chat</string>
    <string name="ad_title">Ad registration</string>
    <string name="categories_title">Categories</string>
    <string name="home_title">Ads</string>
    <string name="city_activity_appbar_text">Select your city</string>
    <string name="search_city_appbr_hint">Search cities</string>
    <string name="help_tooltip">Help</string>
    <string name="back_tooltip">Back</string>
    <string name="search_tooltip">Search</string>
    <string name="Header_city_list">All cities</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_city">CityActivity</string>
    <string name="please_enter_your_phone">Enter your mobile number</string>
    <string name="lock_msg_enter_phone">To use the application features, please enter your mobile number. A confirmation code will be sent to this number.</string>
 <string name="policies_link"><u>terms and rules</u> and <u>privacy policy</u> of the application.</string>
    <string name="policies_link2">Html.fromHtml("I accept the <u>terms and rules</u> and <u>privacy policy</u> of the app.")</string>
    <string name="btn_next">Next</string>
    <string name="login_to_account">Login to user account</string>
    <string name="chat_appbar_lock">Chat app</string>
    <string name="btn_login_lock_chat">Login</string>
    <string name="btn_check">Login</string>
    <string name="title_activity_ad">AdActivity</string>
    <string name="AdRegister">Submit ad</string>
    <string name="category">Category</string>
    <string name="subject_title">Ad title</string>
    <string name="desc_title">Ad Description</string>
    <string name="description_ad">Write your details and points of interest completely and accurately. It is not allowed to write the contact number in the ad text. Be sure to mention your response hours.</string>
    <string name="select_picture_text">Picture</string>
    <string name="header_global_specification">Global specification</string>
    <string name="location_ad_title">Ad range</string>
    <string name="final_price_attr">Price</string>
    <string name="status_ad_attr">Immediate status</string>
    <string name="chat_ad_attr">Enable chat</string>
    <string name="phone_ad_attr">Display phone number</string>
    <string name="submit_ad_btn">Submit ad</string>
    <string name="report_appbar">Register violation in advertisement</string>
    <string name="report_desc">Choose the closest option. Our experts will review your report.</string>
    <string name="report_issue1">Fraud, violation of law or crime</string>
    <string name="report_issue2">Ad content</string>
    <string name="report_issue3">Problems with ad owner</string>
    <string name="submit">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="chat_empty_text">By touching the chat button on the page of any ad, you can send a message to the seller. Also, to receive messages about your ad, you need to activate the chat application when registering your ad.</string>
    <string name="setting_appbar">My Application</string>
    <string name="logout">Log out</string>
    <string name="my_ads_appbar">My Ads</string>
    <string name="about_ad_owner_appbar">About Advertiser</string>
    <string name="activity_owner_newads">Recently Published Ads</string>
    <string name="activity_owner_member">Application membership</string>
    <string name="note_appbar">Note</string>
    <string name="title_note_fragment">To remember the points about this ad, you can write them down. Your notes can be seen on the "Notes and Badges" page. If the ad is deleted, your note will be deleted.</string>
    <string name="my_ads">My Ads</string>
    <string name="app_version">1.1.2 v</string>
    <string name="ads">Ads</string>
    <string name="just_show_recently_ads">Only recent ads are displayed.</string>
    <string name="request_again">Request again</string>
    <string name="phone_number">Mobile number</string>
    <string name="about_the_advertiser">About the advertiser</string>
    <string name="status">Status</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="registration_of_violation_and_ad_problem">Registration of violation and ad problem</string>
    <string name="chat">Chat</string>
    <string name="contacts">Contacts</string>
    <string name="phone_call_to">Phone call to</string>
    <string name="send_sms_to">Send SMS to</string>
    <string name="note">Note</string>
    <string name="note_taking">Note taking</string>
    <string name="share">Share</string>
    <string name="ad_registration_guide">Ad registration guide</string>
    <string name="ad_photos">Ad photos</string>
    <string name="adding_photo_will_increase_your_ad_views_up_to_times">Adding a photo will increase your ad views up to 3 times.</string>
    <string name="add_image">Add image</string>
    <string name="title_ad_important_impressive">In the title of the ad, mention the important and impressive things.</string>
    <string name="attributes">Attributes</string>
    <string name="determination">Determination</string>
    <string name="ad_category">Ad category</string>
    <string name="chat_application">Chat application</string>
    <string name="search_all_ads">Search all ads</string>
    <string name="lock_chat_msg">To start a new conversation or access previous conversations, you need to log in to the user account first.</string>
    <string name="which_part_of_the_ad_is_the_problem">In which part of the ad is the problem?</string>
    <string name="markingـnotes">Marking and notes</string>
    <string name="published">Published</string>
    <string name="you_have_selected_the_ad_registration_guide">You have selected the ad registration guide.</string>
    <string name="enter_a_title_and_description">Enter a title and description.</string>
    <string name="confirm">Confirm</string>
    <string name="image_selection">Select the image</string>
    <string name="there_problem_opening_file">There is a problem opening the file</string>
    <string name="registering_an_ad">Registering an ad</string>
    <string name="upload_ad">Upload ad</string>
    <string name="ad_was_successfully_registered">The ad was successfully registered.</string>
    <string name="there_is_a_problem_registering_the_ad">There is a problem registering the ad.</string>
    <string name="communication_problem_has_occurred">A connection problem has occurred.</string>
    <string name="try_again">Try again</string>
    <string name="submitting_report">Submitting report</string>
    <string name="upload_report">Upload report</string>
    <string name="report_was_successfully_registered">The report was successfully registered.</string>
    <string name="note_was_successfully_registered">The note was successfully registered.</string>
    <string name="there_problem_with_taking_notes">There is a problem with taking notes.</string>
    <string name="enter_the_text_of_the_note">Enter the text of the note.</string>
    <string name="reporting_is_problematic">Reporting is problematic.</string>
    <string name="choosing_one_of_the_above_is_mandatory">Choosing one of the above is mandatory.</string>
    <string name="you_with_the_number">You with the number </string>
    <string name="you_are_logged_in_and_you_are_viewing_the_ads_registered_with_this_number"> logged in and you are viewing the ads registered with this number.</string>
    <string name="you_have_successfully_logged_out_of_your_account">You have successfully logged out of your account.</string>
    <string name="allow_permission">Allow permission!</string>
    <string name="successfully_sent_code">Code sent successfully. Code: </string>
    <string name="you_have_successfully_logged_in">You have successfully logged in.</string>
    <string name="request_again_code">Request again (00:</string>
    <string name="enter_Code">Enter Auth Code</string>
    <string name="please_give_confirmation_code_the_number">Please give the confirmation code to the number</string>
    <string name="enter_the_text_message">Enter the text message.</string>
    <string name="resend">Resend</string>
    <string name="to_use_the_features_of_application_please_enter_your_mobile_number">To use the features of the application, please enter your mobile number. A confirmation code will be sent to you via SMS.</string>
    <string name="few_moments_ago">A few moments ago</string>
    <string name="dollar">Dollar</string>
    <string name="st_quick_sale">Quick sale</string>
    <string name="st_normal">Normal sale</string>
    <string name="share_ad_coming_soon">Share ad coming soon</string>
    <string name="all_ads">All ads </string>
    <string name="expired">Expired</string>
    <string name="in">in</string>
    <string name="the_ad_was_marked">The ad was marked</string>
    <string name="the_ad_was_removed">The ad was removed</string>
    <string name="ad_not_shown_check_your_internet">Ad not shown, check your internet.</string>
    <string name="there_is_a_problem_creating_the_ad_chat">There is a problem creating the ad chat.</string>
    <string name="the_ad_chat_was_created_successfully">The ad chat was created successfully.</string>
    <string name="ad_customer">Ad customer (you)</string>
    <string name="ad_client">Ad client</string>
    <string name="making_ad_chat">Making ad chat</string>
    <string name="chat_ad">Chat ad</string>
    <string name="conversation_with">Conversation with</string>
    <string name="you_are_an_ad_customer">You are an ad customer</string>
    <string name="you_are_owner_of_the_ad">You are the owner of the ad</string>
    <string name="send">Send</string>
    <string name="message">Message...</string>
    <string name="msg_me">My message</string>
    <string name="msg">Message</string>
    <string name="note_">Note</string>
    <string name="note_text">Note text</string>
    <string name="translate">Translate</string>
    <string name="english_persian">English/Persian</string>
    <string name="select_language">Select the language</string>
    <string name="persian">Persian</string>
    <string name="english">English</string>
    <string name="see_translate">See translate</string>
    <string name="language">English</string>
    <string name="one_the_display_number_chat_ads_must_be_active">One of the display number or chat ads must be active.</string>
    <string name="spanish">Spanish</string>
    <string name="translation_failed">Translation failed.</string>
    <string name="unspecified_category">Unspecified category</string>
    <string name="vehicles">Vehicles</string>
    <string name="digital_products">Digital products</string>
    <string name="home_and_kitchen">Home and kitchen</string>
    <string name="services">Services</string>
    <string name="personal_items">Personal items</string>
    <string name="entertainment_and_leisure">Entertainment and leisure</string>
    <string name="social">Social</string>
    <string name="industrial_equipment">Industrial equipment</string>
    <string name="reg_select">Select the province and city where your ad is located, and if it is not listed, select the closest one.</string>
    <string name="city">City</string>
    <string name="range">Select the ad range on the map</string>
    <string name="msg_map">By choosing the range, your ad will be displayed with a map</string>
    <string name="add_range">Add a range on the map</string>
</resources>