<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@mipmap/ic_icon"
        android:title="@string/home_title"/>
    <item
        android:id="@+id/categories"
        android:enabled="true"
        android:icon="@mipmap/ic_categories"
        android:title="@string/categories_title"/>

    <item
        android:id="@+id/ad"
        android:enabled="true"
        android:icon="@mipmap/ic_ad"
        android:title="@string/ad_title"/>
    <item
        android:id="@+id/chat"
        android:enabled="true"
        android:icon="@mipmap/ic_chat"
        android:title="@string/chat_title"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@mipmap/ic_profile"
        android:title="@string/profile_title"/>
</menu>