<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    style="@style/Layouts">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/titel"
        android:padding="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            style="@style/Texts.TextViews"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/padding_default"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/english"
        android:padding="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/icon"
                android:layout_width="@dimen/s28"
                android:layout_height="@dimen/s28"
                android:src="@mipmap/ic_lang"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                style="@style/Texts.TextViews"
                android:layout_toEndOf="@id/icon"
                android:layout_gravity="center_vertical"
                android:padding="8dp"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/spanish"
        android:padding="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/icon3"
                android:layout_width="@dimen/s28"
                android:layout_height="@dimen/s28"
                android:src="@mipmap/ic_lang"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spanish"
                style="@style/Texts.TextViews"
                android:layout_toEndOf="@id/icon3"
                android:layout_gravity="center_vertical"
                android:padding="8dp"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/persian"
        android:padding="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/icon2"
                android:layout_width="@dimen/s28"
                android:layout_height="@dimen/s28"
                android:src="@mipmap/ic_lang"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/persian"
                style="@style/Texts.TextViews"
                android:layout_toEndOf="@id/icon2"
                android:layout_gravity="center_vertical"
                android:padding="8dp"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>