<?xml version="1.0" encoding="utf-8"?>
<layout>
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Layouts">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Layouts">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:id="@+id/textView"
                        style="@style/Texts.TextViews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_to_account"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/btn_back"
                        app:layout_constraintTop_toTopOf="parent"
                        />


                    <ImageButton
                        android:id="@+id/btn_back"
                        style="@style/ImageButtons"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="@dimen/margin_default"
                        android:background="@null"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_back"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:visibility="gone"
                        android:onClick="ViewsActions"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/appbar"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/pleaseEnterYourPhone"
                style="@style/Texts.TextViews"
                android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/separator"
                android:text="@string/please_enter_your_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/msg"
                style="@style/Texts.TextViews"
                android:textColor="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/lock_msg_enter_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pleaseEnterYourPhone"
                tools:targetApi="o" />

            <LinearLayout
                android:id="@+id/linear_input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:background="@drawable/shape"
                app:layout_constraintBottom_toTopOf="@+id/msg2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/msg">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_default">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_phone_input"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:ellipsize="end"
                        android:inputType="phone"
                        android:maxLength="11"
                        style="@style/textInputEditText"
                        android:maxLines="1"
                        android:hint="@string/phone_number"
                        android:scrollHorizontally="true"
                        android:background="@null"
                        android:textAlignment="textStart"
                        />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/msg2"
                style="@style/Texts.TextViews"
                android:textColor="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_input_phone"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/margin_default"
                android:padding="@dimen/padding_default"
                android:gravity="center"
                >


                <Button
                    android:id="@+id/btn_check"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_check"
                    android:layout_weight=".5"
                    android:background="@drawable/shape"
                    android:layout_margin="@dimen/margin_default"
                    android:visibility="invisible"
                    android:onClick="ViewsActions"
                    android:textAllCaps="false"
                    />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:layout_margin="@dimen/margin_small">

                    <TextView
                        android:id="@+id/txt_timer"
                        style="@style/Texts.TextViews"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/small_font_size"
                        android:text="@string/request_again"
                        android:textAllCaps="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="parent"
                        app:layout_constraintStart_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <Button
                        android:id="@+id/btn_send"
                        style="@style/Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_next"
                        android:background="@drawable/shape"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="parent"
                        app:layout_constraintStart_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textAllCaps="false"
                        android:onClick="ViewsActions"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>