<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LockChatFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Layouts">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/textView"
                    style="@style/Texts.TextViews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_appbar_lock"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/pleaseLogin"
            style="@style/Texts.TextViews"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/separator"
            android:text="@string/lock_chat_msg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/pleaseLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/margin_default"
            android:orientation="horizontal">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight=".5"
                />
            <Button
                android:id="@+id/btn_login"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_login_lock_chat"
                android:layout_weight=".5"
                android:textAllCaps="false"
                android:background="@drawable/shape"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight=".5"
                />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>